[tool.poetry]
name = "coffeemesh"
version = "0.1.0"
description = ""
authors = ["Yung-Jin (Joey) Hu <yungjinhu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
starlette = "^0.13.6"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
isort = "^5.7.0"
black = "^20.8b1"
ipython = "^7.21.0"
pylint = "^2.7.2"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
